# ai_aim

./: .gitignore  .gitmodules  CLEANUP_VERIFICATION.md  CMakeLists.txt  README.md  REAL_AIM_ASSIST.md  TRANSFORMATION_COMPLETE.md  UNIFIED_ARCHITECTURE.md  UNIVERSAL_ARCHITECTURE.md  demo_system  demo_system.cpp  integration_test  integration_test.cpp  system_test.sh  system_transformation.md  test_aim_assist  test_aim_assist.cpp  test_target.cpp  test_unified_system  test_unified_system.cpp  verify_system.sh
config/: game_memory.cfg
src/AimTrainer/: AimTrainer.vcxproj  AimTrainer.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  main.cpp
src/IPC/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  IPC.sln  IPC.vcxproj  IPC.vcxproj.filters  NamedPipe.cpp  NamedPipe.h  SharedMemory.cpp  SharedMemory.h  SharedStructs.h  SharedStructs_Old.h
src/InjectedDLL/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  InjectedDLL.vcxproj  InjectedDLL.vcxproj.filters  dllmain.cpp
src/Injector/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Injector.sln  Injector.vcxproj  Injector.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  main.cpp
src/Launcher/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Launcher.cpp  Launcher.vcxproj  Launcher.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/Overlay/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Overlay.vcxproj  Overlay.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  UnifiedOverlay.cpp
src/Overlay/AimAssist/: AimAssist.cpp.deprecated  AimAssist.h.deprecated  UniversalAimAssist.cpp  UniversalAimAssist.h
src/Overlay/Core/: DllMain.cpp  Main.cpp  Main.h
src/Overlay/IPC/: NamedPipe.cpp  SharedMemory.cpp  SharedMemory.h
src/Overlay/Input/: InputManager.cpp  InputManager.h
src/Overlay/Memory/: GameData.cpp  GameData.h
src/Overlay/Renderer/: Renderer.cpp  Renderer.h
src/Overlay/UI/: Menu.cpp  Menu.h
src/Overlay/Utils/: Singleton.h
src/Universal/: AimSystem.h  CMakeLists.txt  GameDetection.cpp  GameDetection.h  GraphicsDetection.h  InjectionManager.cpp  InjectionManager.h  MemoryScanner.cpp  MemoryScanner.h
src/Utils/: CMakeLists.txt  GameDetection.cpp  GameDetection.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Logger.cpp  Logger.h  Singleton.h  StringConvert.h  StringUtils.h  UnifiedAimAssist.cpp  UnifiedAimAssist.h  UnifiedConfig.cpp  UnifiedConfig.h  UnifiedMemoryScanner.cpp  UnifiedMemoryScanner.h  UnifiedUtilities.h  UniversalConfig.cpp  UniversalConfig.h  UniversalCore.cpp  UniversalCore.h  UniversalMemoryScanner.cpp  UniversalMemoryScanner.h  Utils.vcxproj  Utils.vcxproj.filters
